Update Sidenavbar.css changed sidesbar

--- a/src/components/Sidenavbar/Sidenavbar.css
+++ b/src/components/Sidenavbar/Sidenavbar.css
@@ -6,7 +6,7 @@
   }
   
   
-  .sidebar {
+  .sidesbar {
     width: 180px; /* Adjust the width as needed */
     background-color: #45af9a;
     padding: 8px;
