--- a/src/components/home/homepg.css
+++ b/src/components/home/homepg.css
@@ -16,7 +16,7 @@
 }
 
 .home-ul{
-    background-color: #F8CF50;
+    background-color:#F7D8BA;
     margin-top:40px;
     margin-left:20px;
 }
@@ -39,7 +39,7 @@
     width:fit-content;
     font-size: 20px;
     height: fit-content;
-    color:#F8CF50;
+    color:#F7D8BA;
     padding-top: 20% ;
 }
 
